fixing wrong exceptions and remove try catch from controller